Designed home page
Designed home page

--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
         <li>Experience in using Chrome Developer Tool for debugging and Troubleshooting the code</li><br>
         <li>Knowledge of NodeJS</li><br>
         <li>Ability to work with people at all levels in the program</li>
+        <li>Knowledge of mongodb and expressJs</li>
     </ul>
 </fieldset>
 </body>
