--- a/index.html
+++ b/index.html
@@ -5,19 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+     <link rel="shortcut icon" href="assets/my favicon.png" type="image/x-icon">
 </head>
 <body>
-    <i class="fa fa-user" aria-hidden="true"></i> <span>Seema Ekatpure</span>&nbsp;&nbsp;&nbsp;
-    <i class="fa fa-phone-square" aria-hidden="true"></i><span>9623452007</span>&nbsp;&nbsp;&nbsp;
-    <i class="fa fa-envelope" aria-hidden="true"></i><span>seema.ekatpure1990@gmail.com</span>
+    <!--Header section -->
+    <header>
+        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span>Mohit Sharma</span> &nbsp;&nbsp; &nbsp;
+        <i class="fa fa-phone-square" aria-hidden="true"> &nbsp;</i><span>+91 8964 25 3647</span>&nbsp;&nbsp; &nbsp;
+        <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<span>abc@gmail.com</span>
+    </header>
     <br><br>
-    <iframe src="" width="900px" height="500px"></iframe>
-    <br><br>
-    <span>Follow me</span>
-    <a href="https://in.linkedin.com/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://www.google.com/intl/en_in/gmail/about/" target="_blank"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://www.facebook.com/" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- Navigation section  -->
+    <nav>
+        <a href="home.html" target="myframe">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp;
+        <a href="techStack.html" target="myframe">TECH STACK</a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="projectDetails.html" target="myframe">PROJECT</a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="education.html" target="myframe">EDUCATION</a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="">OTHERS</a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="">PERSONAL </a> &nbsp;&nbsp;&nbsp; &nbsp;
+    </nav>
+    <br />
+
+    <!-- main section -->
+    <iframe src="home.html" width="1100" height="550" name="myframe" frameborder="0">
+    </iframe>
+    <br />
+    <br />
+    <!-- Footer section  -->
+    <footer>
+        <label for=""> <strong> Follow me </strong> </label> &nbsp; &nbsp; &nbsp;&nbsp;
+        <a href="https://in.linkedin.com/"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.google.com/"><i class="fa fa-2x fa-google" aria-hidden="true"></i></a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/"> <i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.facebook.com/"><i class="fa fa-2x fa-facebook-official" aria-hidden="true"></i>
+        </a>
+    </footer>
+  
 </body>
 </html>
