added new responsibility
added new responsibility

--- a/projectDetails.html
+++ b/projectDetails.html
@@ -20,35 +20,29 @@
     </p>
     <p>
       <strong>Team Size:</strong
-      >06&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong>2021-1<sup>st</sup>-<i
-        >July till present</i
-      >
+      >&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong>2021-1<sup>st</sup>-<i >July till present</i >
     </p>
     <p>
-      <strong>Project Description:</strong>This project is mainlyused for
-      student management in collage ,where It help to manage student record
-      like<br />
-      student registration,student update information and to see all his or her
-      academic activities like score card,attendance
+      <strong>Project Description:</strong>This project is mainly used for student management in collage ,where It help to manage student record like
+      <br />
+      student registration,student update information and to see all his or her academic activities like score card,attendance
     </p>
     <hr />
     <p><strong>Roles and Responsibilities:</strong></p>
-    <p>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Designed and implemented the user
-      interface using HTML5 and CSS
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Work closly with backend
-      developers for code integration
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Identifying and troubleshooting
-      issues with front end code
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Worked on GIT as a version
-      control 
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Used JIRA for bug
-      tracking 
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Implemented project
-      using Agile SCRUM methodology,Involved in daily stand up meeting ,sprint
-      showcase and sprint retrospective
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Involved in fixing technical
-      issue
+    <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Designed and implemented the user interface using HTML5 and CSS <br />
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       Work closely with backend developers for code integration
+       <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Identifying and troubleshooting issues with front end code <br />
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+      Worked on GIT as a version control
+      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       Used JIRA for bug tracking
+      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+      Implemented project using Agile SCRUM methodology,Involved in daily stand up meeting ,sprint showcase and sprint retrospective 
+      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+      Involved in fixing technical issue
     </p>
     <hr />
   </body>
