added new responsibility
added new responsibility

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="projectDetails.html" target="myframe">PROJECT</a> &nbsp;&nbsp;&nbsp; &nbsp;
         <a href="education.html" target="myframe">EDUCATION</a> &nbsp;&nbsp;&nbsp; &nbsp;
         <a href="">OTHERS</a> &nbsp;&nbsp;&nbsp; &nbsp;
-        <a href="">PERSONAL </a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="personal.html" target="myframe">PERSONAL </a> &nbsp;&nbsp;&nbsp; &nbsp;
     </nav>
     <br />
 
