added new responsibility
added new responsibility

--- a/home.html
+++ b/home.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+   <style>
+    .summary{
+              background-color: bisque;
+              color: blue;
+    }
+    #angular{
+             color: chartreuse;
+    }
+    .professionalSummary{
+                          background-color: aqua;
+                          color: darkgoldenrod;
+    }
+   </style>
+
+  </head>
+  <body>
     <fieldset>
-    <legend><h2>Professional Summery</h2></legend>
-    <ul type="square">
-        <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li><br>
-        <li>Experience on working with version control system - GIT and GitHub</li><br>
-        <li>Experience working with JIRA for user stories and bug tracking</li><br>
-        <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li><br>
-        <li>Working exposure on ID's like VS Code and Notepad++</li><br>
-        <li>Good working experience under Agile methodologies environment</li><br>
-        <li>Experience in using Chrome Developer Tool for debugging and Troubleshooting the code</li><br>
-        <li>Knowledge of NodeJS</li><br>
+      <h2 class="summary">Career Objectives</h2>
+      <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELPS  ORGANIZATIONAL GROWTH </p>
+      <h2 class="summary">Professional Summery</h2>
+      <ul type="square">
+        <li>Having 1 years of experience in developing Single page WebApplications using <span id="angular">Angular 8</span>, HTML5, CSS3, Bootstrap 5, JavaScript,TypeScript</li>
+        <br />
+        <li class="professionalSummary"> Experience on working with version control system - GIT and GitHub </li>
+        <br />
+        <li>Experience working with JIRA for user stories and bug tracking</li>
+        <br />
+        <li class="professionalSummary">Strong Debugging & Troubleshooting code experience using Chrome Developer Tool </li>
+        <br />
+        <li>Working exposure on ID's like VS Code and Notepad++</li>
+        <br />
+        <li class="professionalSummary">Good working experience under Agile methodologies environment</li>
+        <br />
+        <li> Experience in using Chrome Developer Tool for debugging andTroubleshooting the code</li>
+        <br />
+        <li>Knowledge of NodeJS</li>
+        <br />
         <li>Ability to work with people at all levels in the program</li>
         <li>Knowledge of mongodb and expressJs</li>
-    </ul>
-</fieldset>
-</body>
+      </ul>
+    </fieldset>
+  </body>
 </html>
