--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+    header{
+       background-color: yellow;
+       color: red;
+    }
+    </style>
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="shortcut icon" href="assets/my favicon.png" type="image/x-icon">
+
 </head>
 <body>
     <!--Header section -->
     <header>
-        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span>Mohit Sharma</span> &nbsp;&nbsp; &nbsp;
-        <i class="fa fa-phone-square" aria-hidden="true"> &nbsp;</i><span>+91 8964 25 3647</span>&nbsp;&nbsp; &nbsp;
-        <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<span>abc@gmail.com</span>
+        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span>Seema Ekatpure</span> &nbsp;&nbsp; &nbsp;
+        <i class="fa fa-phone-square" aria-hidden="true"> &nbsp;</i><span>+91 9623 23 2007</span>&nbsp;&nbsp; &nbsp;
+        <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<span>seema.ekatpure1990@gmail.com</span>
     </header>
     <br><br>
     <!-- Navigation section  -->
