--- a/others.html
+++ b/others.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies and Personal Strength</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        .other{
+            font-family: 'Roboto', sans-serif;
+            text-transform: uppercase;
+        }
+
+    </style>
 </head>
 <body>
-    <h2>My Hobbies</h2>
+    <h2 class="other">My Hobbies</h2>
     <ul>
         <li>Reading</li>
         <li>Watching Motivational videos</li>
@@ -14,7 +24,7 @@
         <li>Coding</li>
     </ul>
     <hr>
-    <h2>My Personal Strength</h2>
+    <h2  class="other">My Personal Strength</h2>
     
 </body>
 </html>
