--- a/techStack.html
+++ b/techStack.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        #stack{
+            font-family: 'Roboto', sans-serif;
+           text-transform: uppercase;
+        }
+    </style>
 </head>
 <body>
-    <h2>My Technology Stack</h2>
+    <h2 id="stack">My Technology Stack</h2>
        <ul>
         <li>HTML5</li>
         <li>CSS</li>
