added margin and padding
added margin and padding

--- a/education.html
+++ b/education.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education Details </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        .details{
+           font-family: 'Roboto', sans-serif;
+           text-transform: uppercase;
+        }
+    </style>
+       
+    
 </head>
 <body>
    
-       <h2>Education Details </h2>
+       <h2 class="details">Education Details </h2>
        <table border="1px">
           <thead >
             <tr>
