--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
        background-color: yellow;
        color: red;
     }
+    .contact{
+        margin-right: 50px;
+    }
+    .header-icon{
+        margin-right: 10px;
+    }
+    .details{
+      margin-right: 50px;
+    }
+    .footer-icon {
+        margin-right: 20px;
+    }
     </style>
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,19 +30,19 @@
 <body>
     <!--Header section -->
     <header>
-        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span>Seema Ekatpure</span> &nbsp;&nbsp; &nbsp;
-        <i class="fa fa-phone-square" aria-hidden="true"> &nbsp;</i><span>+91 9623 23 2007</span>&nbsp;&nbsp; &nbsp;
-        <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<span>seema.ekatpure1990@gmail.com</span>
+        <i class="header-icon fa fa-user" aria-hidden="true"></i><span class="contact">Seema Ekatpure</span> 
+        <i class="header-icon fa fa-phone-square" aria-hidden="true"> </i><span class="contact">+91 9623 45 2007</span>
+        <i class="header-icon fa fa-envelope" aria-hidden="true"></i> <span>seema.ekatpure1990@gmail.com</span>
     </header>
     <br><br>
     <!-- Navigation section  -->
     <nav>
-        <a href="home.html" target="myframe">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp;
-        <a href="techStack.html" target="myframe">TECH STACK</a> &nbsp;&nbsp;&nbsp; &nbsp;
-        <a href="projectDetails.html" target="myframe">PROJECT</a> &nbsp;&nbsp;&nbsp; &nbsp;
-        <a href="education.html" target="myframe">EDUCATION</a> &nbsp;&nbsp;&nbsp; &nbsp;
-        <a href="">OTHERS</a> &nbsp;&nbsp;&nbsp; &nbsp;
-        <a href="personal.html" target="myframe">PERSONAL </a> &nbsp;&nbsp;&nbsp; &nbsp;
+        <a href="home.html"  target="myframe"  class="details"  >HOME</a> 
+        <a href="techStack.html" target="myframe" class="details"  >TECH STACK</a> 
+        <a href="projectDetails.html"  target="myframe" class="details">PROJECT</a> 
+        <a href="education.html"  target="myframe"class="details" >EDUCATION</a> 
+        <a href="others.html"  target="myframe" class="details">OTHERS</a>
+        <a href="personal.html" target="myframe" class="details" >PERSONAL </a> 
     </nav>
     <br />
 
@@ -41,11 +53,11 @@
     <br />
     <!-- Footer section  -->
     <footer>
-        <label for=""> <strong> Follow me </strong> </label> &nbsp; &nbsp; &nbsp;&nbsp;
-        <a href="https://in.linkedin.com/"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.google.com/"><i class="fa fa-2x fa-google" aria-hidden="true"></i></a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.instagram.com/"> <i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.facebook.com/"><i class="fa fa-2x fa-facebook-official" aria-hidden="true"></i>
+        <label for=""> <strong> Follow me </strong> </label>
+        <a href="https://in.linkedin.com/"><i class="footer-icon fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a> 
+        <a href="https://www.google.com/"><i class=" footer-icon fa fa-2x fa-google" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/"> <i class=" footer-icon fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/"><i class=" footer-icon fa fa-2x fa-facebook-official" aria-hidden="true"></i>
         </a>
     </footer>
   
