--- a/personal.html
+++ b/personal.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My Personal Details</title>
+    <style>
+        .contact{
+            margin-left: 30px;
+        }
+    </style>
 </head>
 <body>
 
 <h2> Personal Details</h2>
 <p> <img src="assets/developer.png" alt="developer photo" height="100px" width="100px"></p>
-    <p> &nbsp; &nbsp;Seema Ekatpure</p>
+    <p class="contact">Seema Ekatpure</p>
     
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Mobile Number:</strong>+91 9623 45 2007</p>
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Email:</strong>seema.ekatpure1990@gmail.com</p>
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Date of birth:</strong>Nov-26-1990</p>
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Address:</strong>Akluj,Solapur</p>
+       <p class="contact"><strong>Mobile Number:</strong >+91 9623 45 2007</p>
+       <p class="contact"><strong>Email:</strong>seema.ekatpure1990@gmail.com</p>
+       <p class="contact"><strong>Date of birth:</strong>Nov-26-1990</p>
+       <p class="contact"><strong>Address:</strong>Akluj,Solapur</p>
        <hr>
        <details>
         <summary>Family Details </summary>
