--- a/basicCss.html
+++ b/basicCss.html
@@ -47,6 +47,26 @@
         border-width: 2px;
         border-color: rgb(247, 142, 105); */
         border: 2px solid rgb(247, 142, 105);
+        margin-top: 60px;
+        margin-left: 20px;
+
+        /*padding-left: 40px;
+        padding-top: 40px;
+        padding-right: 30px;
+        padding-bottom: 50px;*/
+
+       /*padding:20px 30px 50px 40px;*/ 
+
+        /*padding-left: 20px;
+        padding-top: 10px;
+        padding-right: 20px;
+        padding-bottom: 10px;*/
+
+        /*padding:10px 20px ;*/
+
+        padding: 20px;
+
+
        }
 
     </style>
@@ -62,7 +82,7 @@
     <h3>Lorem ipsum dolor sit.</h3>
     <h4>Lorem ipsum dolor sit amet.</h4>
     <p class="dummy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p>I am <span id="developer">UI Developer</span> having expertise of 4 years</p>
+    <p style="border: 2px solid cadetblue ; margin-bottom: 40px;">I am <span id="developer">UI Developer</span> having expertise of 4 years</p>
 
     <p class="tools" >I know tools: Git, Desktop Github, Agile and JIRA</p>
 </body>
