--- a/projectDetails.html
+++ b/projectDetails.html
@@ -3,46 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Dtails</title>
+    <title>Project Details</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+      .project{
+        margin-right: 10px;
+      }
+      #name{
+        margin-left: 10px;
+      }
+      .details{
+        padding-bottom: 10px;
+      }
+      #myproject{
+        font-family: 'Roboto', sans-serif;
+        text-transform: uppercase;
+      }
+    </style>
   </head>
   <body>
-    <h2>Project Details</h2>
+    <h2 id="myproject">Project Details</h2>
     <hr />
     <p>
-      <strong>Name:&nbsp;&nbsp;<u>Student Management</u></strong>
+      <strong >Name:<u id="name">Student Management</u></strong>
+      
     </p>
     <p>
-      <u><strong>Environment:</strong></u
-      >&nbsp;&nbsp;<mark
-        >Angular 8,TypeScript,JavaScript(ES6),HTML5,CSS,Bootstrap,GitHub,Desktop
-        GitHub,Agile and JIRA,IDE-VS Code</mark
-      >
+      <u><strong class="project" >Environment:</strong></u >
+        Angular 8,TypeScript,JavaScript(ES6),HTML5,CSS,Bootstrap,GitHub,Desktop
+        GitHub,Agile and JIRA,IDE-VS Code
     </p>
     <p>
-      <strong>Team Size:</strong
-      >&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong>2021-1<sup>st</sup>-<i >July till present</i >
+      <strong  class="project">Team Size:</strong><strong>Duration:</strong>2021-1<sup>st</sup>-<i >July till present</i >
     </p>
     <p>
-      <strong>Project Description:</strong>This project is mainly used for student management in collage ,where It help to manage student record like
+      <strong  class="project">Project Description:</strong>This project is mainly used for student management in collage ,where It help to manage student record like
       <br />
       student registration,student update information and to see all his or her academic activities like score card,attendance
     </p>
     <hr />
-    <p><strong>Roles and Responsibilities:</strong></p>
-    <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      Designed and implemented the user interface using HTML5 and CSS <br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-       Work closely with backend developers for code integration
-       <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      Identifying and troubleshooting issues with front end code <br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-      Worked on GIT as a version control
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-       Used JIRA for bug tracking
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-      Implemented project using Agile SCRUM methodology,Involved in daily stand up meeting ,sprint showcase and sprint retrospective 
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-      Involved in fixing technical issue
+    <p><strong >Roles and Responsibilities:</strong></p>
+    <p>
+      <ul>
+        <li class="details">  Designed and implemented the user interface using HTML5 and CSS </li>
+        <li class="details">Work closely with backend developers for code integration</li>
+        <li class="details">  Designed and implemented the user interface using HTML5 and CSS </li>
+        <li class="details"> Work closely with backend developers for code integration</li>
+        <li class="details">Identifying and troubleshooting issues with front end code  </li>
+        <li class="details"> Worked on GIT as a version control</li>
+        <li class="details"> Used JIRA for bug tracking </li>
+        <li class="details">Implemented project using Agile SCRUM methodology,Involved in daily stand up meeting ,sprint showcase and sprint retrospective </li>
+        <li class="details">Involved in fixing technical issue</li>
+      </ul>
+    
     </p>
     <hr />
   </body>
