added CSS properties
added CSS properties

--- a/home.html
+++ b/home.html
@@ -28,6 +28,18 @@
     #summaryList{
       font-family: 'Poppins', sans-serif;
     }
+    li::selection{
+            background-color: green;
+        }
+        ul{
+         list-style-type: none;
+        }
+        li::before{
+            content: "👉";
+        }
+        li{
+            padding:10px;
+        }
    </style>
 
   </head>
