--- a/projectDetails.html
+++ b/projectDetails.html
@@ -21,6 +21,9 @@
         font-family: 'Roboto', sans-serif;
         text-transform: uppercase;
       }
+      .details::selection{
+        background-color: aqua;
+      }
     </style>
   </head>
   <body>
