added CSS properties
added CSS properties

--- a/education.html
+++ b/education.html
@@ -15,8 +15,8 @@
         .details:hover{
             color: aquamarine;
         }
-        .educationDetails:hover{
-             color: cadetblue;
+       .educationDetails:hover{
+            background-color: blue;
         }
         
     </style>
@@ -54,7 +54,7 @@
                   <td class="educationDetails">3</td>
                   <td class="educationDetails">SSC or 10th</td>
                   <td class="educationDetails">New English  School</td>
-                  <td class="educationDetails" ></td>Maharashtra Divisional Board</td>
+                  <td class="educationDetails">Maharashtra Divisional Board</td>
              </tr>
           </tbody>
        </table>
