--- a/card.html
+++ b/card.html
@@ -51,7 +51,7 @@
            }
            .boxed{
             height: 100px;
-            widows: 400px;
+            width: 400px;
             margin-top: 50px;
             font-family: 'Roboto', sans-serif;
             text-align: center;
