--- a/card.html
+++ b/card.html
@@ -15,6 +15,7 @@
             margin: 60px 0px 0px 100px;
             width: 400px;
             height: 400px;
+            border-radius: 10px;
             background-color: burlywood;
             font-family: 'Roboto', sans-serif;
 
@@ -49,12 +50,15 @@
 
 
            }
-           .boxed{
-            height: 100px;
+           .container2{
+            height: 155px;
             width: 400px;
+            border: 1px solid;
             margin-top: 50px;
+            background-color: aqua;
             font-family: 'Roboto', sans-serif;
             text-align: center;
+            border-radius: 10px;
 
            }
     </style>
@@ -64,10 +68,10 @@
         <img src="assets/developer.png" alt="" >
         <p class="name">William henry gates</p>
         <p id="founder">Microsoft Co-Founder</p>
-        <div class="boxed">
-            <p>For</p>
-            <p>Project and People </p>
-            <p>Transformation</p>
+        <div class="container2">
+            <p>For<br>
+            Project and People <br>
+            Transformation</p>
         </div>
         
 
